found_bugs/kotlin/1/compiler_output
program.kt:8:19: error: type mismatch: inferred type is Int but Short was expected
        if (true) -20 else -1
                  ^
program.kt:8:28: error: type mismatch: inferred type is Int but Short was expected
        if (true) -20 else -1
                           ^
